# EnScrypt

./: .gitignore  BUILDING.md  CHANGES  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE  README.md  README.md.in  bootstrap.sh  config.h.in  enscrypt.c  enscrypt.h  enscrypt_bin.c  generate_win32.bat  libenscrypt.kdev4  mainpage.dox.in  realtime.c  test.c
cmake/: .gitignore  android.toolchain.cmake
doc/html/: annotated.html  classes.html  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  enscrypt_8c.html  enscrypt_8h.html  enscrypt_8h.js  enscrypt_8h_source.html  enscrypt_ms.html  files.html  files.js  globals.html  globals_func.html  globals_type.html  index.html  libenscrypt.html  navtree.js  navtreeindex.js  pages.html  scrypt-jane_8h_source.html  structenscrypt__context.html  structscrypt__aligned__alloc__t.html
doc/html/search/: all_0.js  all_65.js  classes_65.js  classes_73.js  files_0.js  functions_0.js  functions_65.js  pages_0.js  search.js  typedefs_0.js  typedefs_65.js
scrypt/: scrypt-jane-hash.h  scrypt-jane-mix_salsa-avx.h  scrypt-jane-mix_salsa-neon.h  scrypt-jane-mix_salsa-sse2.h  scrypt-jane-mix_salsa-xop.h  scrypt-jane-portable-arm.h  scrypt-jane-portable-x86.h  scrypt-jane-portable.h  scrypt-jane-romix-basic.h  scrypt-jane-romix.h  scrypt-jane-salsa.h  scrypt-jane-test-vectors.h  sysendian.h
src/: com_sqrlauth_enscrypt_Enscrypt.c  com_sqrlauth_enscrypt_Enscrypt.h  cpu-features.c  enscrypt.c  enscrypt.h  enscrypt_bin.c  realtime.c  test.c
src/android/: Android.mk  AndroidManifest.xml  Enscrypt.java
toolchain/: .gitignore
